ganti tampilan di register

--- a/public/register.html
+++ b/public/register.html
@@ -52,8 +52,8 @@
     }
 
     input:focus {
-        border-color: #7f5aff;
-        box-shadow: 0 0 8px #7f5aff;
+        border-color: #8772d4;
+        box-shadow: 0 0 8px #8f5aff;
     }
 
     button {
