memperbaiki warna di admin html

--- a/public/admin.html
+++ b/public/admin.html
@@ -44,12 +44,12 @@
       border-radius: 12px;
       overflow: hidden;
       border: 1px solid #7f5af033;
-      box-shadow: 0 0 25px #7f5af022;
+      box-shadow: 0 0 25px #4b16eb22;
     }
 
     th {
       background: #7f5af0;
-      color: white;
+      color: rgb(215, 170, 170);
       padding: 12px;
       text-shadow: 0 0 10px white;
     }
